--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>GitHub Proxy 代理加速</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/TheFine/proxy/css/main.min.css" />
+		<link rel="stylesheet" href="./css/main.min.css" />
 		<link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/TheFine/proxy/favicon.ico">
 
 		<!-- Twitter Cards -->
